--- a/sections/BelowFold.liquid
+++ b/sections/BelowFold.liquid
@@ -4,13 +4,13 @@
       <h2>Ready for Peace?</h2>
       <div class="hero-description">
         <p>
-          Elevate your living space with our globally inspired collection of handmade furniture, where
-          <span class="underline-text">craftsmanship meets contemporary luxury.</span>
+          Elevate your living space with our globally inspired collection of handmade furniture, where craftsmanship
+          meets contemporary luxury.
         </p>
       </div>
       <div class="Hero-ctas">
-        <a href="/collections/all" class="button learn-more">Discover More</a>
-        <a href="/collections/all" class="button shop-now">Purchase Peace</a>
+        <a href="./about" class="button learn-more">Discover More</a>
+        <a href="./collections" class="button shop-now">Purchase Peace</a>
       </div>
     </div>
     <div class="BelowFoldRight">
