--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -31,7 +31,7 @@
               width="16"
               height="16"
             >
-            <a class="ContactLinks" href="Alastair.smith83@gmail.com"> Alastair.smith83@gmail.com</a>
+            <a class="ContactLinks" href="mailto:andrasgardenheaven@gmail.com "> andrasgardenheaven@gmail.com </a>
           </div>
 
           <div class="InfoDiv">
@@ -44,8 +44,8 @@
             >
             <a
               class="ContactLinks"
-              href="https://www.instagram.com/alastair_smith_ceramics/"
-              >@ alastair_smith_ceramics</a
+              href="https://www.instagram.com/andrasgardenheaven/"
+              >@ andrasgardenheaven</a
             >
           </div>
         </div>
