--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -100,13 +100,11 @@
     --heading-font: 'Futura Book', sans-serif;
     --body-font: 'Elgian', serif;
   }
-
   .footer {
     background-color: var(--green900);
     color: var(--white);
     text-align: center;
-    border-top: var(--white);
-    border-width: 1rem;
+    border-top: var(--grey) 1rem solid;
     border-style: solid none none none;
   }
   .footer__content {
