--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -181,6 +181,23 @@
     height: 50px;
     width: 50px;
   }
+
+  /* Media Queries */
+
+  @media screen and (max-width: 550px) {
+    .FooterLogo {
+      padding: 2rem;
+    }
+    .FooterBio {
+      padding: 1rem;
+    }
+    .FooterContact {
+      padding: 1rem;
+    }
+    .footer__copyright {
+      padding: 1rem;
+    }
+  }
 {% endstylesheet %}
 
 {% schema %}
