--- a/sections/BelowFold.liquid
+++ b/sections/BelowFold.liquid
@@ -9,7 +9,7 @@
         </p>
       </div>
       <div class="Hero-ctas">
-        <a href="./about" class="button learn-more">Discover More</a>
+        <a href="sections\about" class="button learn-more">Discover More</a>
         <a href="./collections" class="button shop-now">Purchase Peace</a>
       </div>
     </div>
